# sphero-rvr-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  claude.md  deploy.sh
.cargo/: config.toml
.github/: copilot-instructions.md
examples/: basic_connection.rs  battery_status.rs  dispatcher_demo.rs  hello_rvr.rs  led_control.rs  power_management.rs
src/: connection.rs  error.rs  lib.rs  response.rs
src/api/: client.rs  constants.rs  mod.rs  types.rs
src/commands/: builder.rs  mod.rs
src/protocol/: checksum.rs  encoding.rs  framing.rs  mod.rs  packet.rs  packet.rs.OLD  parser.rs
src/transport/: dispatcher.rs  mod.rs
tests/: integration_dispatcher.rs
