[package]
name = "sphero-rvr"
version = "0.1.0"
edition = "2021"
authors = ["Tim Boldt"]
description = "Rust library for controlling Sphero RVR robots via UART"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timboldt/sphero-rvr-rs"
readme = "README.md"
keywords = ["sphero", "rvr", "robotics", "uart", "serial"]
categories = ["embedded", "hardware-support"]

[dependencies]
# Serial communication (blocking I/O)
serialport = "4.5"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Reduce binary size for embedded deployment

[[example]]
name = "basic_connection"
path = "examples/basic_connection.rs"

[[example]]
name = "dispatcher_demo"
path = "examples/dispatcher_demo.rs"

[[example]]
name = "hello_rvr"
path = "examples/hello_rvr.rs"
